--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Server side for synchronizing the next alarm clock in my phone to display on Raspberry Pi",
   "main": "app.js",
   "dependencies": {
+    "express": "^4.14.0",
+    "express-session": "^1.15.1",
     "morgan": "^1.7.0",
-    "express": "^4.14.0"
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
