--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.15.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-google-id-token": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
   },
   "devDependencies": {},
